Upgraded to version 0.6.0.

--- a/README
+++ b/README
@@ -2,4 +2,4 @@ Stacktrace.js WebJar
 
 More info: http://webjars.org
 
-Upstream: http://stacktracejs.com/
+Upstream: https://github.com/stacktracejs/stacktrace.js
